<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:orientation="vertical" >
<include layout="@layout/actionbar_layout" />
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/jdlBantu"
            android:gravity="center_horizontal"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp" />
</LinearLayout>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/jdlBantu1"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginStart="35dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="35dp"
            android:text="@string/isiMenu1"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="35dp"
            tools:ignore="RtlSymmetry" />
</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="35dp"
            android:text="@string/isiMenuLanjutan1"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="35dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="60dp"
            android:text="@string/jdlBantu2"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:paddingStart="60dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:text="@string/isiMenu2"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="RtlSymmetry"
            android:paddingStart="60dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="35dp"
            android:text="@string/jdlBantu3"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:paddingStart="35dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="35dp"
            android:text="@string/isiMenu3"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="35dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="35dp"
            android:text="@string/jdlBantu4"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:paddingStart="35dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="35dp"
            android:text="@string/isiMenu4"
            android:textColor="#ff29549f"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="35dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</LinearLayout>