<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_background"
    tools:context="com.on29studio.ekazpraw.LampActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <include layout="@layout/actionbar_layout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:text="@string/textIP"
            android:textStyle="bold"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/editTextIPAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/hintIP"
            android:autofillHints="192.168.43.73"
            tools:ignore="TextFields"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:text="@string/txtPort"
            android:textStyle="bold"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/editTextPortNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/hintPort"
            android:inputType="number"
            android:autofillHints="80" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang1"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang2"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang3"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang4"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang5"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang6"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang7"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tv_ruang8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ruang8"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/sw_switch8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>